# SkyPro_Homeworks

./: .coverage  README.md  dev.py  dev_get_by_date.py  dev_sorted.py  dump2.csv  dump3.csv  operations.json  pyproject.toml  task1.py  task2.py  task3.py  task4.py  task5.py  task_2.py  welcomee.py
SkyPro_da_21/: get.py  slice.py
SkyPro_day_20/: two_func.py
lessons/: les_01.py  les_02.py  les_03.py  les_04.py
tasks/: task1.py  task2.py  task3.py  task4.py
tests/: test_get.py  test_get_val.py  test_index_of.py  test_set_.py  test_slice.py
