[tool.poetry]
name = "skypro-day-20"
version = "0.1.0"
description = ""
authors = ["Zheka-m-p <chernik.dota@mail.ru>"]
readme = "README.md"
packages = [{include = "skypro_day_20"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
