[tool.poetry.scripts]
welcome = 'welcomee:main'

[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Evgeniy Chernikov <chernik.dota@mail.ru>"]
readme = "README.md"
packages = [{include = "code"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
